# csgo-demo-parser

./: .gitignore  .gitmodules  Cargo.toml
dl_demo_dataset/: README.md  download.ers
proto/: README.md  generate.ers
proto/messages/: cstrike15_usermessages.proto  netmessages.proto
src/: error.rs  lib.rs
src/messages/: cstrike15_gcmessages.rs  cstrike15_usermessages.rs  engine_gcmessages.rs  mod.rs  netmessages.rs  steammessages.rs
src/parser/: command.rs  console_command.rs  data_table.rs  header.rs  mod.rs  string_table.rs  user_command.rs
src/parser/packet/: message.rs  mod.rs
src/reader/: bitreader.rs  ext.rs  mod.rs
tests/: test_parser.rs
