[package]
name = "csgo-demo-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
thiserror = "1.0.38"
tracing = "0.1.37"
