[package]
name = "csgo-demo-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.3.0"
getset = "0.1.2"
paste = "1.0.11"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
const_format = "0.2.30"
